tests/snapshots/integration__integration_tests__help__help_beta.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - beta
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt-beta - Development and testing utilities
Usage: wt beta [OPTIONS] <COMMAND>

Commands:
  run-hook         Run project hook
  commit           Commit changes with LLM-generated message
  squash           Squash commits with LLM-generated message
  push             Push changes to local target branch
  rebase           Rebase onto target
  ask-approvals    Store approvals in config
  clear-approvals  Clear approved commands from config
  select           Interactive worktree selector

Options:
  -C <path>
      Change working directory

  -v, --verbose
      Show commands and debug info

  -h, --help
      Print help

----- stderr -----
