tests/snapshots/integration__integration_tests__help__help_init.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - init
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt-init - Generate shell integration code
Usage: wt init [OPTIONS] <SHELL>

Options:
  --command-name <COMMAND_NAME>
      Command name             
                               
      [default: wt]            

  -C <path>
      Change working directory

  -v, --verbose
      Show commands and debug info

  -h, --help
      Print help

----- stderr -----
